// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createElementNode > should correctly create new element node 1`] = `
{
  "children": [],
  "data": {
    "abc": true,
    "xyz": "1",
  },
  "tag": "test",
  "type": "ELEMENT",
}
`;

exports[`createElementNode > should correctly create new element node 2`] = `
{
  "children": [
    1,
    2,
    3,
    4,
  ],
  "data": {
    "abc": true,
    "xyz": "1",
  },
  "tag": "test",
  "type": "ELEMENT",
}
`;
